# sonicmaker

./: Cargo.toml  README.md  Sega Genesis 32X - Sonic the Hedgehog - Green Hill Zone & Ending.png.import  character.tscn  default_theme.tres  godot.code-workspace  icon.svg.import  layer_switcher.tscn  project.godot  script.sh  sensor.tscn  tilemap.tscn
godot/: character.tscn  default_theme.tres  export_presets.cfg  green_hill.tscn  hitbox.tscn  layer_switcher.tscn  levF99.tmp  level_maker.gd  level_maker.tscn  main.tscn  project.godot  sensor.tscn  sonic-3.ttf.import  sonicmaker.gdextension  til3EE3.tmp  tilemap.tscn
godot/assets/: sonic-3.ttf.import
godot/assets/badnik/: badniks.png.import  exhaust.png.import  explosion.png.import  motobug.png.import
godot/assets/common/: Sega Genesis 32X - Sonic the Hedgehog - Objects Common.png.import  Sega Genesis 32X - Sonic the Hedgehog 2 - Objects Common.png.import  Sega Genesis 32X - Sonic the Hedgehog 3 - Objects Common.png.import  diagonal_spring.aseprite  diagonal_spring.png.import  monitor.aseprite  monitor.png.import  ring.aseprite  ring.png.import  spike.png.import  spring.aseprite  spring.png.import
godot/assets/green_hill/: 27190.png.import  Background.png.import  additions.png.import  (+10 more)
godot/autoload/: event_bus.gd
godot/enemies/: explosion.tscn  motobug.gd  motobug.tscn
godot/game_objects/: bumper.gd  bumper.tscn  destroyed_monitor.tscn  diagonal_spring.gd  diagonal_spring.tscn  item_monitor.gd  item_monitor.tscn  moving_platform.tscn  pushable.gd  pushable_block.tscn  red_spring.tscn  solid_object.tscn  spike.gd  spike.tscn  spring.gd  spring.tscn
godot/green_hill/: additions.png.import  tilemap.tres  waterfalls.png.import
godot/hitboxes/: attackable.gd  attackable.tscn  badnik.gd  badnik.tscn  hurt.gd  hurt.tscn  increment_rings.gd  ring.gd  ring.tscn  scattered_ring.gd  scattered_ring.tscn  spike.gd  spike.tscn
godot/player/: chaD9CB.tmp  character.tscn  player_camera.gd  player_hitbox.gd
godot/solid_objects/: dia6714.tmp  diagonal_spring.gd  diagonal_spring.tscn  ite1C8C.tmp  item_monitor.gd  item_monitor.tscn  moving_object.gd  moving_platform.gd  moving_platform.tscn  pushable.gd  pushable_block.gd  pushable_block.tscn  red_spring.tscn  sloped_solid_object.tscn  solid_object.tscn  solid_path_2d.tscn  spike.gd  spike.tscn  spring.gd  spring.tscn
godot/ui/: draw_tile.gd  ground_cursor.tscn  lev88B0.tmp  level_maker.tscn  menu.gd  menu.tscn  player_cursor.tscn  rings_label.gd  spawn_player.gd  spawn_scene.gd
green_hill/: backgrounds.png.import  base.png.import  base_processed.png.import  green hill tileset.aseprite  tilemap.tres
rust/: Cargo.toml  bacon.toml
rust/src/: character.rs  hitbox.rs  layer_switcher.rs  level_maker.rs  lib.rs  sensor.rs  sloped_solid_object.rs  solid_line_2d.rs  solid_object.rs  solid_path_2d.rs  tool.rs  vec3_ext.rs
rust/src/character/: airborne.rs  collision.rs  godot_api.rs  grounded.rs  lifecycle.rs  setters.rs  utils.rs
rust/src/solid_object/: sloped_solid_object.rs
sonic/: sonic.png.import
src/: character.rs  layer_switcher.rs  lib.rs  sensor.rs  vec3_ext.rs
src/character/: collision.rs  collision_checking.rs  lifecycle.rs  setters.rs  utils.rs
(+43 files in other folders)
