[package]
name = "sonicmaker" # Appears in the filename of the compiled dynamic library.
version = "0.1.0"   # You can leave version and edition as-is for now.
edition = "2021"

[lints.rust]
keyword_idents = { level = "warn", priority = -1 }
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
non_ascii_idents = "warn"
noop_method_call = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"

[lints.clippy]
cargo_common_metadata = "allow"
cargo = { level = "warn", priority = -1 }

struct_field_names = "allow"
unreadable_literal = "allow"
similar_names = "allow"
cast_possible_truncation = "allow"
used_underscore_binding = "allow"
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
significant_drop_tightening = "allow"
module_name_repetitions = "allow"
suboptimal_flops = "allow"
nursery = { level = "warn", priority = -1 }
unsafe = "deny"


wildcard_imports = "warn"
cognitive_complexity = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
doc_link_with_quotes = "warn"
doc_markdown = "warn"
empty_line_after_outer_attr = "warn"
empty_structs_with_brackets = "warn"
float_cmp = "warn"
float_cmp_const = "warn"
float_equality_without_abs = "warn"
missing_const_for_fn = "warn"
# missing_docs_in_private_items = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
mod_module_files = "warn"
option_if_let_else = "warn"
print_stderr = "warn"
print_stdout = "warn"
semicolon_if_nothing_returned = "warn"
unseparated_literal_suffix = "warn"
suspicious_operation_groupings = "warn"
unused_self = "warn"
use_debug = "warn"
useless_let_if_seq = "warn"
wildcard_dependencies = "warn"
[lib]
crate-type = ["cdylib"] # Compile this crate to a dynamic C library.

[dependencies]
godot = "0.1.3"
