[package]
name = "sonicmaker" # Appears in the filename of the compiled dynamic library.
version = "0.1.0"   # You can leave version and edition as-is for now.
edition = "2021"

[lints.rust]
keyword_idents = { level = "warn", priority = -1 }
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
non_ascii_idents = "warn"
unused_crate_dependencies = "warn"
# missing_docs = "warn"

[lints.clippy]
cargo_common_metadata = "allow"
cargo = { level = "warn", priority = -1 }

struct_field_names = "allow"
unreadable_literal = "allow"
similar_names = "allow"
cast_possible_truncation = "allow"
used_underscore_binding = "allow"
pedantic = { level = "warn", priority = -1 }
significant_drop_tightening = "allow"
module_name_repetitions = "allow"
suboptimal_flops = "allow"
nursery = { level = "warn", priority = -1 }

unwrap_used = "warn"
expect_used = "warn"
dbg_macro = "warn"
float_cmp_const = "warn"
# missing_docs_in_private_items = "warn"
# missing_docs = "warn"
print_stderr = "warn"
print_stdout = "warn"
todo = "warn"
use_debug = "warn"

[lib]
crate-type = ["cdylib"] # Compile this crate to a dynamic C library.

[dependencies]
godot = "0.1.3"
